--- a/formcombobox.html
+++ b/formcombobox.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2373038-Form Array Operasi</title>
+    <title>2373038-Form Combo Box</title>
     <script>
         var arr = [];
 
