--- a/highlightedtable.html
+++ b/highlightedtable.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <style>
-    table {
-        width: 50px;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>2373038-Highlighted table</title>
+    <style>
+        table {
+            width: 50px;
+        }
 
-    th, td {
-        border: 1px solid #d1d1d1;
-        padding: 6px;
-        text-align: center;
-    }
+        th, td {
+            border: 1px solid #d1d1d1;
+            padding: 6px;
+            text-align: center;
+        }
 
-    th {
-        background-color: #cee4fc;
-    }
+        th {
+            background-color: #0c643b;
+            color: white;
+        }
 
-    .blue {
-        background-color: #cee4fc;
-    }
+        .blue {
+            background-color: #cee4fc;
+        }
 
-    .orange {
-        background-color: #f7bda0;
-    }
+        .orange {
+            background-color: #f7bda0;
+        }
 
-    .green {
-        background-color: #ccffaa;
-    }
+        .green {
+            background-color: #ccffaa;
+        }
 
-    tr.hoverable:hover {
-        background-color: #ccffaa;
-    }
+        tr.hoverable:hover {
+            background-color: #ccffaa;
+        }
 </style>
 </head>
 <body>
